<resources>
    <string name="z0">0</string>
    <string name="ac">AC</string>
    <string name="ac_">AC*</string>
    <string name="ability_mod">Ability Mod.</string>
    <string name="act">Act!</string>
    <string name="add">Add</string>
    <string name="add_attack">Add Attack</string>
    <string name="add_cfeat">Add Other</string>
    <string name="add_counter">Add Counter</string>
    <string name="add_feat">Add Feat</string>
    <string name="add_gear">Add Gear</string>
    <string name="add_item">Add Item</string>
    <string name="add_skill">Add Skill</string>
    <string name="add_spell">Add Spell</string>
    <string name="age">Character Age</string>
    <string name="app_name">PFRPG Character Sheet</string>
    <string name="armor">Armor</string>
    <string name="armor_bonus">Armor Bonus</string>
    <string name="armor_class">Armor Class</string>
    <string name="arrow_down">↓</string>
    <string name="arrow_left">←</string>
    <string name="arrow_right">→</string>
    <string name="arrow_up">↑</string>
    <string name="attack_ability">Attack Ability</string>
    <string name="attack_bonus">Attack Bonus</string>
    <string name="attack_desc">Attack Description</string>
    <string name="attack_name">Attack Name</string>
    <string name="attack_panel_info_standard">Use the Edit Combat Gear panel in order to add weapons. Select main hand and off hand weapons using the drop-down menus. Use the \'Act!\' button in order to see the attack bonuses for each attack in a full attack action (a standard action uses only the first bonus).</string>
    <string name="attack_panel_info_portrait"> Conditions may be set using the drawer on the right. Drag your finger from the right edge of the screen in order to reveal the Conditions panel.</string>
    <string name="bab">BAB</string>
    <string name="base_abilities">Base Abilities</string>
    <string name="base_attack_bonus">Base Attack Bonus</string>
    <string name="base_score">Base Score</string>
    <string name="base_score_modifier">Modifier</string>
    <string name="base_stats">Base Stats</string>
    <string name="blinded">Blinded</string>
    <string name="cancel">Cancel</string>
    <string name="cha">CHA</string>
    <string name="character_bio">Character Bio</string>
    <string name="character_bio_hint">Deep, complicated backstory.</string>
    <string name="character_name_field">Character Name</string>
    <string name="character_name_text">Name</string>
    <string name="character_receive_info">In order to receive a character from another device, you must use Bluetooth to pair with that device. Use the \'Settings\' menu option and follow the directions there in order to pair a device. Once this is done, select the \'Listen\' button on this device, and then select this device from the \'Paired Devices\' list on the sending device. Then select the character\'s name from the list on this page, and hit the \'back\' button. Note that if a character with that name exists, it will be overwritten.</string>
    <string name="character_select_add">Add Character</string>
    <string name="character_select_remove">Erase Character</string>
    <string name="character_size">Character Size</string>
    <string name="character_transfer_info">In order to transfer a character to a device, first select the \'Listen\' option in the \'Receive Character\' page on that device, and then select the device from this device\'s \'Paired Devices\' list. If you haven\'t yet paired with the device to which you wish to transfer your character, select the \'Settings\' menu option and follow the directions in your Bluetooth Settings page.</string>
    <string name="character_xp">Character XP</string>
    <string name="charge">Charge</string>
    <string name="class_field_hint">Class # / Class #</string>
    <string name="class_modifiers">Class Modifiers</string>
    <string name="cleave">Cleave</string>
    <string name="cmb">CMB</string>
    <string name="cmd">CMD</string>
    <string name="cmd_bonus">CMD Bonus</string>
    <string name="combat_expertise">Combat Expertise</string>
    <string name="combat_maneuver_bonus">Combat Maneuver Bonus</string>
    <string name="con">CON</string>
    <string name="conditions">Conditions</string>
    <string name="counter_name">Counter Name</string>
    <string name="cowering">Cowering</string>
    <string name="crash_toast_text">Ooooops ! I crashed, but a report has been sent to my developer to help fix the issue !</string>
    <string name="crash_dialog_title">PFRPG Character Sheet has crashed</string>
    <string name="crash_dialog_text">An unexpected error occurred forcing the
    application to stop. Please help us fix this by sending us error data,
    all you have to do is click \'OK\'.</string>
    <string name="crash_dialog_comment_prompt">You might add your comments about the problem below:</string>
    <string name="crash_dialog_ok_toast">Thank you !</string>
    <string name="current_hp">Current HP</string>
    <string name="damage_ability">Damage Ability</string>
    <string name="damage_bonus">Damage Bonus</string>
    <string name="damage_die">Damage Die</string>
    <string name="dazzled">Dazzled</string>
    <string name="deflection_bonus">Misc. Bonus</string>
    <string name="delete">Delete</string>
    <string name="delete_button">Delete</string>
    <string name="delete_gear">Delete Gear</string>
    <string name="dex">DEX</string>
    <string name="dodge">Dodge</string>
    <string name="dodge_bonus">Dodge Bonus</string>
    <string name="done_button">Done</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="edit_combat_gear">Edit Combat Gear</string>
    <string name="edit_counter">Edit Counter</string>
    <string name="entangled">Entangled</string>
    <string name="erase_c">Erase C.</string>
    <string name="feat_description_hint">Feat Description</string>
    <string name="feat_name_hint">Feat Name</string>
    <string name="ffac">FF AC</string>
    <string name="ffcmd">FF CMD</string>
    <string name="fftac">FF+T AC</string>
    <string name="field_feat_name">Feat Name</string>
    <string name="field_feat_desc">Feat Description</string>
    <string name="fight_defensively">Fight Defensively</string>
    <string name="flat_foot_ac">Flat Foot AC</string>
    <string name="flat_footed">Flat-Footed</string>
    <string name="fortitude">Fortitude</string>
    <string name="fortitude_short">F</string>
    <string name="frightened">Frightened</string>
    <string name="gear_name">Equipment Name</string>
    <string name="gear_desc">Other notes</string>
    <string name="gear_type">Gear Type</string>
    <string name="gold">Gold</string>
    <string name="heavy_load">Heavy Load</string>
    <string name="grappling">Grappling</string>
    <string name="helpless">Helpless</string>
    <string name="hint_item_name">Item Name</string>
    <string name="hint_item_desc">Item Description</string>
    <string name="hint_skill_name">Skill Name</string>
    <string name="info">Info</string>
    <string name="init">Init</string>
    <string name="init_bonus">Init. Bonus</string>
    <string name="initiative_bonus">Initiative Bonus</string>
    <string name="inte">INT</string>
    <string name="invisible">Invisible</string>
    <string name="item_quantity">Item Quantity</string>
    <string name="item_weight">Item Weight</string>
    <string name="kneeling">Kneeling</string>
    <string name="known">Known</string>
    <string name="languages">Languages</string>
    <string name="languages_hint">Common, Grippli, &#8230;</string>
    <string name="light_load">Light Load</string>
    <string name="listen">Listen</string>
    <string name="listening_for_chars">Now listening for characters.</string>
    <string name="listening_for_chars_already">Already listening for characters.</string>
    <string name="lunge">Lunge</string>
    <string name="new_c">New C.</string>
    <string name="new_peers">You have new peers available!</string>
    <string name="no_weapon_notice">Please use the Edit Combat Gear panel to equip yourself before trying to attack. Note that you may add Unarmed Strike if you plan on using it.</string>
    <string name="note_ac_mods">Note: Charging, cleaving, lunging, fighting defensively, Two-Weapon Defense, and Combat Expertise will give additional modifiers.</string>
    <string name="main_hand">Main Hand</string>
    <string name="max">Max</string>
    <string name="max_hp">Max HP</string>
    <string name="medium_load">Medium Load</string>
    <string name="menu_settings">Settings</string>
    <string name="min">Min</string>
    <string name="misc">Misc.</string>
    <string name="misc_init_bonus">Misc. Init. Bonus</string>
    <string name="miscellaneous_initiative_bonus">Miscellaneous Initiative Bonus</string>
    <string name="misc_modifiers">Misc. Modifiers</string>
    <string name="misc_mods">Misc. Mods</string>
    <string name="mod_value_done_editing">Done</string>
    <string name="off_hand">Off Hand</string>
    <string name="ok">OK</string>
    <string name="over_limit">Over Limit</string>
    <string name="paired_devices">Paired Devices</string>
    <string name="pfor_toast">You need the \'Pathfinder Open Reference\' app by Devon Jones/Masterwork Tools for more information on your selected item.</string>
    <string name="pinned">Pinned</string>
    <string name="prepared">Prepared</string>
    <string name="prompt_cancel">You are no longer deleting a character.</string>
    <string name="prompt_delete">You will be prompted to delete the next selected character.</string>
    <string name="prone">Prone</string>
    <string name="receive_character">Receive Character</string>
    <string name="reflex">Reflex</string>
    <string name="reflex_short">R</string>
    <string name="reset">Reset</string>
    <string name="reset_">Reset*</string>
    <string name="rolled_hp">Rolled HP</string>
    <string name="save_ability">Save Ability</string>
    <string name="save_bonus">Save Bonus</string>
    <string name="save_dc">Save DC</string>
    <string name="send_character">Send Character</string>
    <string name="shaken">Shaken</string>
    <string name="shield">Shield</string>
    <string name="shield_bonus">Shield Bonus</string>
    <string name="size">Size</string>
    <string name="skill_description_hint">Skill Description</string>
    <string name="skill_name_hint">Skill Name</string>
    <string name="spell_level">Spell Level</string>
    <string name="spell_name">Spell Name</string>
    <string name="spell_description">Spell Description</string>
    <string name="squeezing">Squeezing</string>
    <string name="stat_charisma">CHA</string>
    <string name="stat_constitution">CON</string>
    <string name="stat_dexterity">DEX</string>
    <string name="stat_intelligence">INT</string>
    <string name="stat_strength">STR</string>
    <string name="stat_wisdom">WIS</string>
    <string name="str">STR</string>
    <string name="stunned">Stunned</string>
    <string name="text_ability_modifier">Ability Modifier</string>
    <string name="text_class_levels">Classes/Levels</string>
    <string name="title_counter">Counters</string>
    <string name="text_skill_ranks">Skill Ranks</string>
    <string name="text_total_modifier">Total Modifier</string>
    <string name="temp_adjust">Temporary Adjustment</string>
    <string name="temp_modifier">Temporary Modifier</string>
    <string name="title_activity_acedit">Edit AC</string>
    <string name="title_activity_attack_edit">Edit Attack</string>
    <string name="title_activity_cfeat_edit">Edit Other</string>
    <string name="title_activity_feat_edit">Edit Feat</string>
    <string name="title_activity_item_edit">Edit Item</string>
    <string name="title_activity_skill_edit">Edit Skill</string>
    <string name="title_activity_spell_edit">Edit Spell</string>
    <string name="wis">WIS</string>
</resources>