<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_conditions_conditions"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:choiceMode="singleChoice"
    android:divider="@android:color/transparent"
    android:dividerHeight="0dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/background_light"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_small"
            android:text="@string/conditions" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <CheckBox
            android:id="@+id/fragment_conditions_condition_blinded"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blinded" />

        <CheckBox
            android:id="@+id/fragment_conditions_condition_cowering"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cowering" />

        <CheckBox
            android:id="@+id/fragment_conditions_condition_dazzled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dazzled" />

        <CheckBox
            android:id="@+id/fragment_conditions_condition_entangled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/entangled" />

        <CheckBox
            android:id="@+id/fragment_conditions_condition_flat_footed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flat_footed" />

        <CheckBox
            android:id="@+id/fragment_conditions_condition_frightened"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/frightened" />

        <CheckBox
            android:id="@+id/fragment_conditions_condition_grappling"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grappling" />

        <CheckBox
            android:id="@+id/fragment_conditions_condition_helpless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/helpless" />

        <CheckBox
            android:id="@+id/fragment_conditions_condition_invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invisible" />

        <CheckBox
            android:id="@+id/fragment_conditions_condition_kneeling"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kneeling" />

        <CheckBox
            android:id="@+id/fragment_conditions_condition_pinned"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pinned" />

        <CheckBox
            android:id="@+id/fragment_conditions_condition_prone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prone" />

        <CheckBox
            android:id="@+id/fragment_conditions_condition_shaken"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shaken" />

        <CheckBox
            android:id="@+id/fragment_conditions_condition_squeezing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/squeezing" />

        <CheckBox
            android:id="@+id/fragment_conditions_condition_stunned"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stunned" />
    </LinearLayout>

</ScrollView>